--- a/Croatian/main/Settings.apk/res/values-hr/strings.xml
+++ b/Croatian/main/Settings.apk/res/values-hr/strings.xml
@@ -2848,17 +2848,16 @@
   <string name="bootloader_tips_warning">"Ne odspajajte s mreže, odjaviti se s Xiaomi računa, raditi pvraćanje na tvorničke postavke ili brisati podatke sustava."</string>
   <string name="bootloader_unlock_webhome">https://unlock.update.miui.com</string>
   <string name="bottom_function_settings">Funkcije dodatnih tipki</string>
-  <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
   <string name="bottom_to_top_slide">Povucite prema gore</string>
-  <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
-  <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
+  <string name="bottomsheet_action_collapse">Sakrij donji list</string>
+  <string name="bottomsheet_action_expand">Proširi donji list</string>
   <string name="bottomsheet_action_expand_halfway">Proširi donju polovicu</string>
-  <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
-  <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
+  <string name="bottomsheet_drag_handle_clicked">Dvaput dodirnuta ručka za povlačenje</string>
+  <string name="bottomsheet_drag_handle_content_description">Ručka za povlačenje</string>
   <string name="bounce_keys">Slučajni pritisci tipki</string>
   <string name="bounce_keys_dialog_subtitle">Odaberite koliko dugo će tipkovnica ignorirati ponovljene pritiske tipki</string>
   <string name="bounce_keys_dialog_title">Odgoda tipke za odbijanje</string>
-  <string name="bounce_keys_summary">Tipkovnica zanemaruje brzo ponovljene pritiske iste tipke unutar %1$d ms</string>
+  <string name="bounce_keys_summary">Ignoriraj brzo ponovljene pritiske iste tipke</string>
   <string name="breathing_light_color_menu_title">Boja LED-a</string>
   <string name="breathing_light_color_summary">Boja LED-a kod primanja nove obavijesti</string>
   <string name="breathing_light_freq_summary">Pulsiraj kod nove obavijesti</string>
@@ -13071,7 +13070,7 @@
   <string name="slot_number">(Utor %1$d)</string>
   <string name="slot_status_title">IMEI podaci</string>
   <string name="slow_keys">Spore tipke</string>
-  <string name="slow_keys_summary">Podešava vrijeme potrebno da se pritisak tipke aktivira na %1$d ms</string>
+  <string name="slow_keys_summary">Promijenite koliko dugo trebate držati tipku prije nego što se registrira</string>
   <string name="small_font">Mali</string>
   <string name="small_window_not_support_add_data_toast">"Ne mogu snimati podatke u plutajućim prozorima. Prebacite se na cijeli zaslon i pokušajte ponovno."</string>
   <string name="smallwindow_smartcover_title">Prozirni prednji pokrov</string>
