--- a/Croatian/main/MiLinkService.apk/res/values-hr/strings.xml
+++ b/Croatian/main/MiLinkService.apk/res/values-hr/strings.xml
@@ -701,7 +701,7 @@
   <string name="device_permission_authorize_dialog_title">Dodijeli dopuštenja za kameru na %s</string>
   <string name="device_permission_authorize_dialog_title_car_pad">Dajte dopuštenja na svom tabletu</string>
   <string name="device_permission_dialog_message">Otvorite Postavke &gt; Međusobno povezivanje &gt; Međusobno povezivanje i dopuštenja na %s i najprije dodijelite dopuštenja kameri.</string>
-  <string name="device_permission_dialog_message_car">Možete dopustiti pristup kameri u Postavke &gt; Sustav &gt; Upravljanje aplikacijama &gt; Posebna dopuštenja &gt; Međusobna povezanost na %s.</string>
+  <string name="device_permission_dialog_message_car">Na %s, dopustite pristup kameri u Postavke > Sustav > Upravljanje aplikacijama > Posebna dopuštenja > Međusobna povezanost.</string>
   <string name="device_permission_dialog_message_car_pad">Otvorite Postavke &gt; Međusobno povezivanje &gt; Međusobno povezivanje i dopuštenja &gt; Kamera i dajte dopuštenja da biste mogli koristiti ovu značajku.</string>
   <string name="device_permission_dialog_message_global">"U aplikaciji Sigurnost vašeg %s uređaja, idite na Zaštita privatnosti &gt; Međusobna povezanost i dopuštenja te dopustite Kameri dopuštenja da biste mogli koristiti ovu značajku."</string>
   <string name="device_permission_dialog_message_global_old">"U Postavkama vašeg %s uređaja, idite na Međusobna povezanost &gt; Međusobna povezanost i dopuštenja te dopustite Kameri dopuštenja da biste mogli koristiti ovu značajku."</string>
